@@ -1,3 +1,7 @@
+EB-2001-12-13-0: Bugfix:    Qmaster automatically corrects invalid task id
+                            ranges during job submittion.
+                 Issue:     None (Fix of Enhancem.: EB-2001-12-10-1)
+
 AA-2001-12-13-0: Feature:   added max_aj_instances and max_aj_tasks to global
                             cluster config
                             qmonMirrorMulti -> qmonMirrorMultiAnswer
